@@ -1,6 +1,8 @@
 {% extends "admin/file_manager/base.html" %}
 {% load i18n %}
 
+{% block bodyclass %}file_manager change-form{% endblock %}
+
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 	<a href="../../">{% trans "Home" %}</a> &rsaquo;
@@ -9,29 +11,62 @@
 </div>
 {% endblock %}
 
+{% block coltype %}colM{% endblock %}
+
 
 {% block content %}
+
 <h1>Rename Folder</h1>
 
-<form action="" method="POST">
+    {% block object-tools %}
+        <ul class="object-tools">
+			<li>
+            <a href="{% url mkdir directory.url %}" class="viewsitelink">
+              {% blocktrans with cl.opts.verbose_name as name %}View on
+			  site{% endblocktrans %}
+            </a>
+          </li>
+        </ul>
+    {% endblock %}
 
+
+
+<div id="content-main">
+
+<form action="" method="POST">
+<div>
+{% if errors %}
+	 <p class="errornote">
+	 {% blocktrans count errors|length as counter %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}
+	 </p>
+	 <ul class="errorlist">
+	{% for error in adminform.form.non_field_errors %}<li>{{ error }}</li>{% endfor %}</ul>
+{% endif %}
+				
+
+<fieldset class="module aligned {{ fieldset.classes }}"> 
 {% for field in form %}
   {% if field.is_hidden %}
     {{ field }}
   {% else %}
-    <div class="form{% if field.errors %} error{% endif %}">
+    <div class="form-row{% if field.errors %} errors{% endif %}">
       {% if field.errors %}{{ field.errors }}{% endif %}
+		<div class="field-box">
       {{ field.label_tag }} 
       {{ field }}
-      {{ field.help_text|safe }}
+		{% if field.help_text %}<p class="help">{{ field.help_text|safe }}</p> {% endif %}
+		</div>
     </div>
   {% endif %}
 {% endfor %}
+</fieldset>
 
-<div class="form">
-    <input name="submit" type="submit" value="Save" />
+<div class="submit-row">
+    <input name="submit" type="submit" value="Save" class="default" />
+	<p class="deletelink-box"><a href="" class="deletelink">Delete</a></p>
 </div>
 
 </form>
-
+</div>
+</div>
 {% endblock %}
